// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots tests Description snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="text-center"
        id="presentation"
      >
        <h2
          class="text-3xl text-orange mb-4"
        >
          ChefBot, your new Sous-chef!
        </h2>
        <p>
          ChefBot is an intelligent chatbot that will help you find the perfect meal for your cravings!
        </p>
        <p>
          Scroll below to see some of the cool features of ChiefBot.
        </p>
        <section
          class="text-gray-600 body-font"
        >
          <div
            class="container px-5 py-24 mx-auto flex flex-wrap"
          >
            <div
              class="flex flex-wrap w-full"
            >
              <div
                class="lg:w-2/5 md:w-1/2 md:pr-10 md:py-6"
              >
                <div
                  class="flex relative pb-12"
                >
                  <div
                    class="h-full w-10 absolute inset-0 flex items-center justify-center"
                  >
                    <div
                      class="h-full w-1 bg-gray-600 pointer-events-none"
                    />
                  </div>
                  <div
                    class="flex-shrink-0 w-10 h-10 rounded-full bg-orange inline-flex items-center justify-center text-white relative z-10"
                  >
                    <svg
                      class="w-5 h-5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="AddIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                        />
                      </svg>
                    </svg>
                  </div>
                  <div
                    class="flex-grow pl-4"
                  >
                    <h2
                      class="font-medium title-font text-lg text-gray-900 mb-1 tracking-wider"
                    >
                      Step 1: 
                      <span
                        class="text-gray-700 text-md"
                      >
                        Create your account!
                      </span>
                    </h2>
                    <p
                      class="leading-relaxed"
                    >
                      Create a new account to let Chiefbot remember your preferences!
                    </p>
                  </div>
                </div>
                <div
                  class="flex relative pb-12"
                >
                  <div
                    class="h-full w-10 absolute inset-0 flex items-center justify-center"
                  >
                    <div
                      class="h-full w-1 bg-gray-600 pointer-events-none"
                    />
                  </div>
                  <div
                    class="flex-shrink-0 w-10 h-10 rounded-full bg-orange inline-flex items-center justify-center text-white relative z-10"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="KitchenRoundedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 2.01 6 2a2 2 0 0 0-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.11-.9-1.99-2-1.99zM17 20H7c-.55 0-1-.45-1-1v-7.02c0-.55.45-1 1-1h10c.55 0 1 .45 1 1V19c0 .55-.45 1-1 1zm0-11H7c-.55 0-1-.45-1-1V5c0-.55.45-1 1-1h10c.55 0 1 .45 1 1v3c0 .55-.45 1-1 1zM9 5c.55 0 1 .45 1 1v1c0 .55-.45 1-1 1s-1-.45-1-1V6c0-.55.45-1 1-1zm0 7c.55 0 1 .45 1 1v3c0 .55-.45 1-1 1s-1-.45-1-1v-3c0-.55.45-1 1-1z"
                      />
                    </svg>
                  </div>
                  <div
                    class="flex-grow pl-4"
                  >
                    <h2
                      class="font-medium title-font text-lg text-gray-900 mb-1 tracking-wider"
                    >
                      Step 2: 
                      <span
                        class="text-gray-700 text-md"
                      >
                        Fill your fridge
                      </span>
                    </h2>
                    <p
                      class="leading-relaxed"
                    >
                      With the help of Chiefbot create a virtual copy of your real fridge!
                    </p>
                  </div>
                </div>
                <div
                  class="flex relative pb-12"
                >
                  <div
                    class="h-full w-10 absolute inset-0 flex items-center justify-center"
                  >
                    <div
                      class="h-full w-1 bg-gray-600 pointer-events-none"
                    />
                  </div>
                  <div
                    class="flex-shrink-0 w-10 h-10 rounded-full bg-orange inline-flex items-center justify-center text-white relative z-10"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="RestaurantMenuRoundedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m8.1 13.34 2.83-2.83-6.19-6.18c-.48-.48-1.31-.35-1.61.27-.71 1.49-.45 3.32.78 4.56l4.19 4.18zm6.78-1.81c1.53.71 3.68.21 5.27-1.38 1.91-1.91 2.28-4.65.81-6.12-1.46-1.46-4.2-1.1-6.12.81-1.59 1.59-2.09 3.74-1.38 5.27L4.4 19.17c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 14.41l6.18 6.18c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 13l1.47-1.47z"
                      />
                    </svg>
                  </div>
                  <div
                    class="flex-grow pl-4"
                  >
                    <h2
                      class="font-medium title-font text-lg text-gray-900 mb-1 tracking-wider"
                    >
                      Step 3: 
                      <span
                        class="text-gray-700 text-md"
                      >
                        Pick your poison
                      </span>
                    </h2>
                    <p
                      class="leading-relaxed"
                    >
                      Today feels more like a salad day? Or you want to go barbecue? Chiefbot will have the perfect recipe for you based on what you have in your fridge!
                    </p>
                  </div>
                </div>
                <div
                  class="flex relative pb-12"
                >
                  <div
                    class="h-full w-10 absolute inset-0 flex items-center justify-center"
                  >
                    <div
                      class="h-full w-1 bg-gray-600 pointer-events-none"
                    />
                  </div>
                  <div
                    class="flex-shrink-0 w-10 h-10 rounded-full bg-orange inline-flex items-center justify-center text-white relative z-10"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="LocalGroceryStoreRoundedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM2 4h1l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h11c.55 0 1-.45 1-1s-.45-1-1-1H7l1.1-2h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.37-.66-.11-1.48-.87-1.48H5.21l-.67-1.43c-.16-.35-.52-.57-.9-.57H2c-.55 0-1 .45-1 1s.45 1 1 1zm15 14c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="flex-grow pl-4"
                  >
                    <h2
                      class="font-medium title-font text-lg text-gray-900 mb-1 tracking-wider"
                    >
                      Step 4: 
                      <span
                        class="text-gray-700 text-md"
                      >
                        Try new things!
                      </span>
                    </h2>
                    <p
                      class="leading-relaxed"
                    >
                      If you're down to go do some groceries, Chiefbot will help you make a list of what you need to try a new meal of your taste!
                    </p>
                  </div>
                </div>
                <div
                  class="flex relative"
                >
                  <div
                    class="flex-shrink-0 w-10 h-10 rounded-full bg-orange inline-flex items-center justify-center text-white relative z-10"
                  >
                    <svg
                      class="w-5 h-5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 11.08V12a10 10 0 11-5.93-9.14"
                      />
                      <path
                        d="M22 4L12 14.01l-3-3"
                      />
                    </svg>
                  </div>
                  <div
                    class="flex-grow pl-4"
                  >
                    <h2
                      class="font-medium title-font text-lg text-gray-900 mb-1 tracking-wider"
                    >
                      Last Step: 
                      <span
                        class="text-gray-700 text-md"
                      >
                        Bots can't cook!
                      </span>
                    </h2>
                    <p
                      class="leading-relaxed"
                    >
                      Once your next meal has been choosen, Chiefbot will stay beside you all the way along the cooking journey with tips and instructions!
                    </p>
                  </div>
                </div>
              </div>
              <img
                alt="bot"
                class="w-1/4 h-3/4 mx-auto md:mt-0 mt-12"
                src="bot.png"
              />
            </div>
          </div>
        </section>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="text-center"
      id="presentation"
    >
      <h2
        class="text-3xl text-orange mb-4"
      >
        ChefBot, your new Sous-chef!
      </h2>
      <p>
        ChefBot is an intelligent chatbot that will help you find the perfect meal for your cravings!
      </p>
      <p>
        Scroll below to see some of the cool features of ChiefBot.
      </p>
      <section
        class="text-gray-600 body-font"
      >
        <div
          class="container px-5 py-24 mx-auto flex flex-wrap"
        >
          <div
            class="flex flex-wrap w-full"
          >
            <div
              class="lg:w-2/5 md:w-1/2 md:pr-10 md:py-6"
            >
              <div
                class="flex relative pb-12"
              >
                <div
                  class="h-full w-10 absolute inset-0 flex items-center justify-center"
                >
                  <div
                    class="h-full w-1 bg-gray-600 pointer-events-none"
                  />
                </div>
                <div
                  class="flex-shrink-0 w-10 h-10 rounded-full bg-orange inline-flex items-center justify-center text-white relative z-10"
                >
                  <svg
                    class="w-5 h-5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="AddIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </svg>
                </div>
                <div
                  class="flex-grow pl-4"
                >
                  <h2
                    class="font-medium title-font text-lg text-gray-900 mb-1 tracking-wider"
                  >
                    Step 1: 
                    <span
                      class="text-gray-700 text-md"
                    >
                      Create your account!
                    </span>
                  </h2>
                  <p
                    class="leading-relaxed"
                  >
                    Create a new account to let Chiefbot remember your preferences!
                  </p>
                </div>
              </div>
              <div
                class="flex relative pb-12"
              >
                <div
                  class="h-full w-10 absolute inset-0 flex items-center justify-center"
                >
                  <div
                    class="h-full w-1 bg-gray-600 pointer-events-none"
                  />
                </div>
                <div
                  class="flex-shrink-0 w-10 h-10 rounded-full bg-orange inline-flex items-center justify-center text-white relative z-10"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="KitchenRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18 2.01 6 2a2 2 0 0 0-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.11-.9-1.99-2-1.99zM17 20H7c-.55 0-1-.45-1-1v-7.02c0-.55.45-1 1-1h10c.55 0 1 .45 1 1V19c0 .55-.45 1-1 1zm0-11H7c-.55 0-1-.45-1-1V5c0-.55.45-1 1-1h10c.55 0 1 .45 1 1v3c0 .55-.45 1-1 1zM9 5c.55 0 1 .45 1 1v1c0 .55-.45 1-1 1s-1-.45-1-1V6c0-.55.45-1 1-1zm0 7c.55 0 1 .45 1 1v3c0 .55-.45 1-1 1s-1-.45-1-1v-3c0-.55.45-1 1-1z"
                    />
                  </svg>
                </div>
                <div
                  class="flex-grow pl-4"
                >
                  <h2
                    class="font-medium title-font text-lg text-gray-900 mb-1 tracking-wider"
                  >
                    Step 2: 
                    <span
                      class="text-gray-700 text-md"
                    >
                      Fill your fridge
                    </span>
                  </h2>
                  <p
                    class="leading-relaxed"
                  >
                    With the help of Chiefbot create a virtual copy of your real fridge!
                  </p>
                </div>
              </div>
              <div
                class="flex relative pb-12"
              >
                <div
                  class="h-full w-10 absolute inset-0 flex items-center justify-center"
                >
                  <div
                    class="h-full w-1 bg-gray-600 pointer-events-none"
                  />
                </div>
                <div
                  class="flex-shrink-0 w-10 h-10 rounded-full bg-orange inline-flex items-center justify-center text-white relative z-10"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="RestaurantMenuRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m8.1 13.34 2.83-2.83-6.19-6.18c-.48-.48-1.31-.35-1.61.27-.71 1.49-.45 3.32.78 4.56l4.19 4.18zm6.78-1.81c1.53.71 3.68.21 5.27-1.38 1.91-1.91 2.28-4.65.81-6.12-1.46-1.46-4.2-1.1-6.12.81-1.59 1.59-2.09 3.74-1.38 5.27L4.4 19.17c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 14.41l6.18 6.18c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 13l1.47-1.47z"
                    />
                  </svg>
                </div>
                <div
                  class="flex-grow pl-4"
                >
                  <h2
                    class="font-medium title-font text-lg text-gray-900 mb-1 tracking-wider"
                  >
                    Step 3: 
                    <span
                      class="text-gray-700 text-md"
                    >
                      Pick your poison
                    </span>
                  </h2>
                  <p
                    class="leading-relaxed"
                  >
                    Today feels more like a salad day? Or you want to go barbecue? Chiefbot will have the perfect recipe for you based on what you have in your fridge!
                  </p>
                </div>
              </div>
              <div
                class="flex relative pb-12"
              >
                <div
                  class="h-full w-10 absolute inset-0 flex items-center justify-center"
                >
                  <div
                    class="h-full w-1 bg-gray-600 pointer-events-none"
                  />
                </div>
                <div
                  class="flex-shrink-0 w-10 h-10 rounded-full bg-orange inline-flex items-center justify-center text-white relative z-10"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="LocalGroceryStoreRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM2 4h1l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h11c.55 0 1-.45 1-1s-.45-1-1-1H7l1.1-2h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.37-.66-.11-1.48-.87-1.48H5.21l-.67-1.43c-.16-.35-.52-.57-.9-.57H2c-.55 0-1 .45-1 1s.45 1 1 1zm15 14c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </div>
                <div
                  class="flex-grow pl-4"
                >
                  <h2
                    class="font-medium title-font text-lg text-gray-900 mb-1 tracking-wider"
                  >
                    Step 4: 
                    <span
                      class="text-gray-700 text-md"
                    >
                      Try new things!
                    </span>
                  </h2>
                  <p
                    class="leading-relaxed"
                  >
                    If you're down to go do some groceries, Chiefbot will help you make a list of what you need to try a new meal of your taste!
                  </p>
                </div>
              </div>
              <div
                class="flex relative"
              >
                <div
                  class="flex-shrink-0 w-10 h-10 rounded-full bg-orange inline-flex items-center justify-center text-white relative z-10"
                >
                  <svg
                    class="w-5 h-5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M22 11.08V12a10 10 0 11-5.93-9.14"
                    />
                    <path
                      d="M22 4L12 14.01l-3-3"
                    />
                  </svg>
                </div>
                <div
                  class="flex-grow pl-4"
                >
                  <h2
                    class="font-medium title-font text-lg text-gray-900 mb-1 tracking-wider"
                  >
                    Last Step: 
                    <span
                      class="text-gray-700 text-md"
                    >
                      Bots can't cook!
                    </span>
                  </h2>
                  <p
                    class="leading-relaxed"
                  >
                    Once your next meal has been choosen, Chiefbot will stay beside you all the way along the cooking journey with tips and instructions!
                  </p>
                </div>
              </div>
            </div>
            <img
              alt="bot"
              class="w-1/4 h-3/4 mx-auto md:mt-0 mt-12"
              src="bot.png"
            />
          </div>
        </div>
      </section>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests Footer snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <footer
        class="text-gray-600 body-font"
      >
        <div
          class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col"
        >
          <a
            class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900"
          >
            <svg
              class="w-10 h-10 text-white p-2 bg-orange rounded-full"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
              />
            </svg>
            <span
              class="ml-3 text-xl"
            >
              Chefbot
            </span>
          </a>
          <p
            class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"
            id="trademark"
          >
            © 2022 Chatbot —
            <a
              class="text-gray-600 ml-1"
              href=""
              rel="noopener noreferrer"
              target="_blank"
            >
              @polytech_nancy
            </a>
          </p>
          <span
            class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start"
            id="logos"
          >
            <a
              class="text-gray-500"
              id="fb"
            >
              <svg
                class="w-5 h-5"
                fill="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                strokeidth="2"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"
                />
              </svg>
            </a>
            <a
              class="ml-3 text-gray-500"
              id="twitter"
            >
              <svg
                class="w-5 h-5"
                fill="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
              >
                <path
                  d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"
                />
              </svg>
            </a>
            <a
              class="ml-3 text-gray-500"
              id="ig"
            >
              <svg
                class="w-5 h-5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
              >
                <rect
                  height="20"
                  rx="5"
                  ry="5"
                  width="20"
                  x="2"
                  y="2"
                />
                <path
                  d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"
                />
              </svg>
            </a>
            <a
              class="ml-3 text-gray-500"
              id="linkedIn"
            >
              <svg
                class="w-5 h-5"
                fill="currentColor"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"
                  stroke="none"
                />
                <circle
                  cx="4"
                  cy="4"
                  r="2"
                  stroke="none"
                />
              </svg>
            </a>
          </span>
        </div>
      </footer>
    </div>
  </body>,
  "container": <div>
    <footer
      class="text-gray-600 body-font"
    >
      <div
        class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col"
      >
        <a
          class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900"
        >
          <svg
            class="w-10 h-10 text-white p-2 bg-orange rounded-full"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
            />
          </svg>
          <span
            class="ml-3 text-xl"
          >
            Chefbot
          </span>
        </a>
        <p
          class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"
          id="trademark"
        >
          © 2022 Chatbot —
          <a
            class="text-gray-600 ml-1"
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            @polytech_nancy
          </a>
        </p>
        <span
          class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start"
          id="logos"
        >
          <a
            class="text-gray-500"
            id="fb"
          >
            <svg
              class="w-5 h-5"
              fill="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              strokeidth="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"
              />
            </svg>
          </a>
          <a
            class="ml-3 text-gray-500"
            id="twitter"
          >
            <svg
              class="w-5 h-5"
              fill="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"
              />
            </svg>
          </a>
          <a
            class="ml-3 text-gray-500"
            id="ig"
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <rect
                height="20"
                rx="5"
                ry="5"
                width="20"
                x="2"
                y="2"
              />
              <path
                d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"
              />
            </svg>
          </a>
          <a
            class="ml-3 text-gray-500"
            id="linkedIn"
          >
            <svg
              class="w-5 h-5"
              fill="currentColor"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"
                stroke="none"
              />
              <circle
                cx="4"
                cy="4"
                r="2"
                stroke="none"
              />
            </svg>
          </a>
        </span>
      </div>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests Header snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="body-font font-black"
      >
        <nav
          class="container mx-auto flex text-center flex-row justify-around p-5 md:flex-row items-center"
        >
          <a
            class="flex items-center text-gray-900"
            href="/"
          >
            <span
              class="text-xl"
            >
              Logo Chatbot
            </span>
          </a>
          <a
            class="hover:text-gray-600"
            href="/"
          >
            Home
          </a>
          <a
            class="text-orange hover:text-lightOrange"
            href="/"
          >
            Fridge Icon
          </a>
          <a
            class="hover:text-gray-600"
            href="/"
          >
            Help
          </a>
          <button
            class="inline-flex items-center bg-orange border-0 py-1 px-3 focus:outline-none hover:bg-lightOrange rounded text-white"
          >
            My Account
          </button>
        </nav>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="body-font font-black"
    >
      <nav
        class="container mx-auto flex text-center flex-row justify-around p-5 md:flex-row items-center"
      >
        <a
          class="flex items-center text-gray-900"
          href="/"
        >
          <span
            class="text-xl"
          >
            Logo Chatbot
          </span>
        </a>
        <a
          class="hover:text-gray-600"
          href="/"
        >
          Home
        </a>
        <a
          class="text-orange hover:text-lightOrange"
          href="/"
        >
          Fridge Icon
        </a>
        <a
          class="hover:text-gray-600"
          href="/"
        >
          Help
        </a>
        <button
          class="inline-flex items-center bg-orange border-0 py-1 px-3 focus:outline-none hover:bg-lightOrange rounded text-white"
        >
          My Account
        </button>
      </nav>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests Hero snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container pt-20 flex flex-col text-6xl items-center justify-center mx-auto"
      >
        <h1
          class="p-2"
        >
          WHICH
        </h1>
        <h1
          class="p-2"
        >
          <span
            class="text-orange"
          >
            FOOD MOOD 
          </span>
        </h1>
        <h1
          class="p-2"
        >
          ARE YOU IN?
        </h1>
        <a
          href="/chatbot"
        >
          <button
            class="text-xl inline-flex items-center bg-orange border-0 p-3 focus:outline-none hover:bg-lightOrange rounded text-white m-8"
          >
            Find your next meal -
            &gt;
          </button>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container pt-20 flex flex-col text-6xl items-center justify-center mx-auto"
    >
      <h1
        class="p-2"
      >
        WHICH
      </h1>
      <h1
        class="p-2"
      >
        <span
          class="text-orange"
        >
          FOOD MOOD 
        </span>
      </h1>
      <h1
        class="p-2"
      >
        ARE YOU IN?
      </h1>
      <a
        href="/chatbot"
      >
        <button
          class="text-xl inline-flex items-center bg-orange border-0 p-3 focus:outline-none hover:bg-lightOrange rounded text-white m-8"
        >
          Find your next meal -
          &gt;
        </button>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
